dev/jwindmiller/slurm-17548774.out
  File "009_ContourL_Reanalysis_CWV.py", line 20
    009
      ^
SyntaxError: invalid token
 
Batch Job Summary Report for Job "wrap" (17548774) on daint
-----------------------------------------------------------------------------------------------------
             Submit            Eligible               Start                 End    Elapsed  Timelimit 
------------------- ------------------- ------------------- ------------------- ---------- ---------- 
2019-10-18T17:55:47 2019-10-18T17:55:47 2019-10-18T19:58:37 2019-10-18T19:58:59   00:00:22   00:30:00 
-----------------------------------------------------------------------------------------------------
Username    Account     Partition   NNodes   Energy
----------  ----------  ----------  ------  --------------
jwindmil    s916        normal           1      123 joules
 
This job did not utilize any GPUs
 
----------------------------------------------------------
Scratch File System        Files       Quota
--------------------  ----------  ----------
/scratch/snx3000               7     1000000
 
